--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,8 @@
     --primary-text-color: #212121;
     --black-text-color: #000000;
     --blue-text-color: #2196F3;
-    --bg-hero-color: #2F303A;
+    --bg-hero-color: #C4C4C4;
+    --bg-footer-color: #2F303A;
     --contacts-header-color: #757575;
     --contacts-footer-color: rgba(255, 255, 255, 0.6);
     --button-focus-color: #188CE8;
@@ -137,7 +138,20 @@ ul {
     padding-top: 200px;
     padding-bottom: 200px;
 
+    max-width: 1600px;
+    height: 600px;
+    margin-right: auto;
+    margin-left: auto;
     background-color: var(--bg-hero-color);
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+        url('../images/bghero.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
     text-align: center;
 }
 
@@ -204,6 +218,34 @@ ul {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+}
+
+.benefits-box .item::before {
+    display: block;
+    content: "";
+    height: 120px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: var(--bg-team-color);
+
+    margin-bottom: 30px;
+}
+
+.icon-details {
+    background-image: url();
+}
+
+.icon-punctuality {
+    background-image: url();
+}
+
+.icon-planning {
+    background-image: url();
+}
+
+.icon-technologies {
+    background-image: url();
 }
 
 .features {
@@ -280,7 +322,7 @@ ul {
     padding-top: 60px;
     padding-bottom: 60px;
 
-    background: var(--bg-hero-color);
+    background: var(--bg-footer-color);
 }
 
 .footer-logo {
@@ -379,6 +421,12 @@ ul {
 
 .list-projects .item:nth-last-child(-n+3) {
     margin-bottom: 0;
+}
+
+.list-projects .item:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .content {
