--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     --bg-team-color: #F5F4FA;
     --border-header: #ECECEC;
     --border-project-photo: #EEEEEE;
+    --icons-noactive-color: #AFB1B8;
 }
 
 body {
@@ -306,20 +307,70 @@ ul {
     letter-spacing: 0.03em;
 }
 
+.actions {
+    display: flex;
+    margin: 0 32px;
+    
+}
+
+.item-icon {
+    flex-basis: calc((100% - 40px) / 4);
+    
+}
+
 .social-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    
+    color: var(--icons-noactive-color);
+    border: none;
+    border-radius: 50%;
+}
+
+.social-link:hover {
+    color: var(--primary-bg-color);
+    background-color: var(--blue-text-color);
+    
+}
+
+.team-icon {
+    fill: currentColor;
+}
+
+.item-icon + .item-icon {
+    margin-left: 10px;
+}
+
+.clients-title {
+    margin-bottom: 50px;
+
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+
+.clients {
     display: flex;
 }
 
-.social-link {
-    display: block;
-    padding: 0;
-    width: 44px;
-    height: 44px;
-    border: none;
+.clients .item + .item {
+    margin-left: 30px;
 }
 
-.social-link .item + .item {
-    margin-left: 10px;
+.clients .item {
+    width: 170px;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+    margin-right: 30px;
+}
+
+.clients .item:nth-child(6) {
+    margin-right: 0;
 }
 
 .footer {
