--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ ul {
     margin-right: auto;
     margin-left: auto;
 
-    /* outline: 1px dotted tomato; */
+    outline: 1px dotted tomato;
 }
 
 .main-nav {
@@ -356,21 +356,37 @@ ul {
 
 .clients {
     display: flex;
+    flex-basis: calc((100% - 150px) / 6);
 }
 
-.clients .item + .item {
+.item-clients + .item-clients {
     margin-left: 30px;
 }
 
-.clients .item {
+.clients-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 170px;
-    border: 1px solid #AFB1B8;
-    border-radius: 4px;
-    margin-right: 30px;
+    height: 92px;
+    padding: 0;
+    
+    color: var(--icons-noactive-color);
+    border: none;
 }
 
-.clients .item:nth-child(6) {
-    margin-right: 0;
+.clients-link:hover {
+    color: var(--blue-text-color);
+    border-color: var(--blue-text-color);
+}
+
+.client-icon {
+    fill: currentColor;
+}
+
+.clients .item-clients {
+    border: 1px solid var(--icons-noactive-color);
+    border-radius: 4px;
 }
 
 .footer {
